--- a/TRAVEL_MANAGEMENT-SYSTEM-FRONTEND/src/Styles/AdminHeader.css
+++ b/TRAVEL_MANAGEMENT-SYSTEM-FRONTEND/src/Styles/AdminHeader.css
@@ -8,13 +8,13 @@
   background: #283048; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to left,
-    #859398,
-    #283048
+    #4392d3,
+    #4f4ea3
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to left,
-    #859398,
-    #283048
+    #329dc4,
+    #212f80
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   color: rgb(255, 255, 255);
